[gd_scene load_steps=5 format=3 uid="uid://3e4c3qeq2evh"]

[ext_resource type="Texture2D" uid="uid://onwmo3oh04yl" path="res://Assets/Minijuego/Negro.jpg" id="1_c4igy"]
[ext_resource type="Script" uid="uid://drnc6d2asws26" path="res://Scripts/pause_menu.gd" id="1_dcbfr"]
[ext_resource type="FontFile" uid="uid://co4itwuo7owmy" path="res://Assets/Fonts/PixelifySans-VariableFont_wght.ttf" id="2_dcbfr"]

[sub_resource type="LabelSettings" id="LabelSettings_q2f0n"]
font = ExtResource("2_dcbfr")
font_size = 53

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dcbfr")

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color(1, 1, 1, 0.729412)
layout_mode = 0
offset_right = 275.0
offset_bottom = 183.0
scale = Vector2(4.18154, 3.52875)
texture = ExtResource("1_c4igy")

[node name="LabelPausa" type="Label" parent="."]
layout_mode = 0
offset_left = 390.0
offset_top = 96.0
offset_right = 772.0
offset_bottom = 160.0
text = "Juego Pausado"
label_settings = SubResource("LabelSettings_q2f0n")

[node name="BotonContinuar" type="Button" parent="."]
layout_mode = 0
offset_left = 476.0
offset_top = 241.0
offset_right = 562.0
offset_bottom = 272.0
scale = Vector2(2.38797, 2.66106)
text = "Continuar
"

[node name="BotonOpciones" type="Button" parent="."]
layout_mode = 0
offset_left = 476.0
offset_top = 352.0
offset_right = 556.0
offset_bottom = 383.0
scale = Vector2(2.5489, 2.6715)
text = "Opciones
"

[node name="BotonMenuPrincipal" type="Button" parent="."]
layout_mode = 0
offset_left = 294.0
offset_top = 470.0
offset_right = 489.0
offset_bottom = 501.0
scale = Vector2(3.05808, 3.09897)
text = "Volver al Menu Principal"
